--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
+DOMAIN_NAME="localhost.localhost"
+DOMAIN_EMAIL=""
+
 ################################################################################
 # shouldn't need to modify
-FASTAPI_HOSTNAME=fastapi
 UVICORN_HOST=0.0.0.0
 UVICORN_PORT=8000
