--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -2,6 +2,10 @@ FROM python:3.10
 
 WORKDIR /app
 
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+ENV PYTHONPATH=/app
+
 COPY ./requirements.txt /app/requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
