--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,12 @@ repos:
     args: [--autofix]
   - id: pretty-format-yaml
     args: [--autofix]
+- repo: https://github.com/compilerla/conventional-pre-commit
+  rev: v2.1.1
+  hooks:
+  - id: conventional-pre-commit
+    stages: [commit-msg]
+    args: [] # optional: list of Conventional Commits types to allow e.g. [feat, fix, ci, chore, test]
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.4.0
   hooks:
