--- a/.env
+++ b/.env
@@ -2,6 +2,13 @@ DOMAIN_NAME="localhost.localhost"
 DOMAIN_EMAIL=""
 
 ################################################################################
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=database
+POSTGRES_PORT=5432
+PGDATA=/var/lib/postgresql/data
+
+################################################################################
 # shouldn't need to modify
 UVICORN_HOST=0.0.0.0
 UVICORN_PORT=8000
