--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,14 @@ version: '3'
 services:
   fastapi:
     build: fastapi
+    depends_on:
+    - postgres
     environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
       UVICORN_HOST: ${UVICORN_HOST}
       UVICORN_PORT: ${UVICORN_PORT}
     expose:
@@ -34,6 +41,19 @@ services:
     - CERTBOT_CERTS:/etc/letsencrypt:ro
     - CERTBOT_WEBROOT:/var/www/certbot:ro
     - ./nginx/default.locations.template:/etc/nginx/templates/default.locations.template:ro
+  postgres:
+    image: postgres:14
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      PGDATA: ${PGDATA}
+    expose:
+    - ${POSTGRES_PORT}
+    restart: always
+    volumes:
+    - PGDATA:${PGDATA}
 volumes:
   CERTBOT_CERTS:
   CERTBOT_WEBROOT:
+  PGDATA:
