--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -12,4 +12,4 @@ RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 COPY . /app
 
-CMD [ "python", "app/main.py" ]
+ENTRYPOINT [ "/app/entrypoint.sh" ]
