--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -1,5 +1,8 @@
+asyncpg==0.27.0
 fastapi==0.89.1
+psycopg2==2.9.5
 pydantic==1.10.4
 #semver>=3,<4
 semver==3.0.0.dev4
+SQLAlchemy==2.0.4
 uvicorn==0.20.0
