--- a/fastapi/alembic.ini
+++ b/fastapi/alembic.ini
@@ -6,7 +6,7 @@ script_location = alembic
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
-# file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
+file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d:%%(minute).2d_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
@@ -18,11 +18,11 @@ prepend_sys_path = .
 # installed by adding `alembic[tz]` to the pip requirements
 # string value is passed to dateutil.tz.gettz()
 # leave blank for localtime
-# timezone =
+timezone = UTC
 
 # max length of characters to apply to the
 # "slug" field
-# truncate_slug_length = 40
+truncate_slug_length = 100
 
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
